--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             text-decoration: underline;
         }
     </style>
-    <title>Styled Table</title>
+    <title>Index Table</title>
 </head>
 <body>
     <div class="table">
